--- a/src/app/login/register-page/register-page.component.html
+++ b/src/app/login/register-page/register-page.component.html
@@ -1,34 +1,33 @@
-<form [formGroup]="userForm"  (ngSubmit)="signup()">
+    <div class="row">
+        <div class="col-md-12">
+            <section class="login-form">
+                <form [formGroup]="userForm"  (ngSubmit)="signup()" role="login">
+                    <img src="../../../assets/images/leash_banner_transparent.png" class="img-responsive" alt="leash resource scheduling logo">
+                    <h3 class="text-center">Create an Account with an existing Company</h3>
+    
+                    <label for="email-r-u">Email</label>
+                    <input type="email" id="email-r-u" placeholder="Email" required class="form-control input-lg" formControlName="email" required>
+                  
+                    <div *ngIf="formErrors.email" class="text-danger text-center">
+                      {{ formErrors.email }}
+                    </div>
 
-  <h3>New User Signup</h3>
+                    <label for="password-r-u">Password</label>
+                    <input type="password" id="password-r-u" class="form-control input-lg" placeholder="Password" formControlName="password" required>
+                  
+                    <div *ngIf="formErrors.password" class="text-danger text-center">
+                        {{ formErrors.password }}
+                    </div>
 
+                    <label for="company-r-u">Company Key (This can be found on the account page of an existing company user)</label>
+                    <input type="text" id="company-r-u" class="form-control input-lg" placeholder="Company Key" formControlName="company" required>
 
-  <label for="email-r-u">Email</label>
-  <input type="email" id="email-r-u" class="input"
-         formControlName="email" required >
+                    <div *ngIf="formErrors.company" class="text-danger text-center">
+                            {{ formErrors.company }}
+                        </div>
 
-  <div *ngIf="formErrors.email" class="notification is-danger">
-    {{ formErrors.email }}
-  </div>
-
-  <label for="password-r-u">Password</label>
-  <input type="password" id="password-r-u" class="input"
-         formControlName="password" required >
-
-  <div *ngIf="formErrors.password" class="notification is-danger">
-    {{ formErrors.password }}
-  </div>
-
-  <label for="company-r-u">Company</label>
-  <input type="text" id="company-r-u" class="input"
-  formControlName="company" required >
-
-  <div *ngIf="userForm.valid" class="notification is-success">Form is valid</div>
-  <button type="submit" class="button" [disabled]="!userForm.valid"
-  >Submit</button>
-  <hr>
-  <p class="btn button is-small" (click)="toggleForm()">Already Registered?</p>
-</form>
-
-
-<app-register-company></app-register-company>
+                    <button type="submit" class="button" [disabled]="!userForm.valid" class="btn btn-lg btn-primary btn-block">
+                    Create Account</button>
+                </form>
+            </section>
+    </div>
