--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,27 +1,11 @@
-<!-- <div *ngIf="auth.user | async; then authenticated else guest">
-  template will replace this div
-</div> -->
-
-
-<!-- User NOT logged in -->
-<!-- <ng-template #guest>
-<h3>Howdy, GUEST</h3>
-<p>Login to get started...</p>
-
-<register-page></register-page>
-
-</ng-template> -->
-
-
-<!-- User logged in -->
-<!-- <ng-template #authenticated></ng-template> -->
 <div *ngIf="auth.user | async as user">
   <h3>Howdy, {{ user.email }}</h3>
   <img  [src]="user.photoURL">
   <!-- <p>UID: {{ user.uid }}</p> -->
+  <h2>Company</h2>
+  <p>{{companyName}}</p>
   <h2>Company Key </h2>
   <p>{{ user?.company }} </p>
   <p>Use this key to register new accounts with this company</p>
   <button (click)="auth.signOut()">Logout</button>
 </div>
-<!-- </ng-template> -->
