--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
  @import "../node_modules/fullcalendar/dist/fullcalendar.min.css";
+ @import "https://fonts.googleapis.com/icon?family=Material+Icons";
+body{
+  background-color: #515151;
+}
+form, input, label, p {
+  color: black !important;
+}
+.leash-bg-deep-red{
+  background-color: #931A3D;
+}
+.leash-bg-bright-red{
+  background-color: #dc2315 ;
+}
+.leash-bg-yellow{
+  background-color: #ffc724;
+}
+nav {
+  width: 100%;
+  white-space: nowrap;
+}
+.navbar-nav a:hover {
+  background-color: #dc2315 !important;
+}
+.nav-active {
+  background-color: #ca990a !important;
+}
+.navbar-nav a {
+  font-size: 16px;
+  color: #d9d9d9 !important;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.navbar-header img {
+  max-height: 100%;
+  width: auto;
+}
+nav .dropdown .dropbtn {
+  font-size: 16px;    
+  border: none;
+  outline: none;
+  color: #fbb827;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+.loginPage{
+  margin-bottom: 100px;
+}
 
 .even { background-color:pink; }
 .odd { background-color:lightgoldenrodyellow; }
@@ -7,12 +57,12 @@
     height: 100%;
     min-height: 1000px;
   }
-  .container-full {
+  /* .container-full {
     margin: 0 auto;
     max-width: 100%;
     height: 100%;
     padding:0;
-  }
+  } */
   .schedule-list-resource{
     height: 100px;
   }
@@ -60,9 +110,9 @@
   color: whitesmoke;
   font-weight: bold;
 }
-#customCal tr{
-  /* background-color:red; */
-}
+/* #customCal tr{
+  /* background-color:red; 
+} */
 #customCal td{
   background-color: #ebf0fa;
   color: #b30047;
@@ -72,3 +122,43 @@
   height:40px;
   text-align: center;
 } 
+
+
+
+
+
+
+.login-form {
+	margin-top: 60px;
+}
+
+form[role=login] {
+	color: #5d5d5d;
+	background: #f2f2f2;
+	padding: 26px;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+}
+	form[role=login] img {
+		display: block;
+		margin: 0 auto;
+		margin-bottom: 35px;
+	}
+	form[role=login] input,
+	form[role=login] button {
+		font-size: 18px;
+		margin: 16px 0;
+	}
+	form[role=login] > div {
+		text-align: center;
+	}
+	
+.form-links {
+	text-align: center;
+	margin-top: 1em;
+	margin-bottom: 50px;
+}
+	.form-links a {
+		color: #fff;
+	}
