--- a/src/app/groups/group-add/group-add.component.html
+++ b/src/app/groups/group-add/group-add.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-8 bg-info text-white full-height">
+<div class="col-sm-8 leash-bg-white text-white full-height">
   <form>
       <div class="form-group">
         <label for="name">Group Name</label>
