--- a/src/app/resources/resource-edit/resource-edit.component.html
+++ b/src/app/resources/resource-edit/resource-edit.component.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="form-group">
-        <label for="notes">Alter Ego</label>
+        <label for="notes">Notes</label>
         <input type="text" class="form-control" #note id="notes"
         [value]="(resource | async)?.note">
       </div>
